--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="links-header">
             <a class="formata-link-cor" href="./index.html">Categorias</a>
             <a class="formata-link-cor" href="./faleconosco.html">Fale Conosco</a>
-            <a class="formata-link-cor" href="">Nosso Time</a>
+            <a class="formata-link-cor" href="./nossotime.html">Nosso Time</a>
         </div>
         <div class="label-input-botao">
             <label for="nome">Nome</label>
@@ -36,98 +36,62 @@
         <hr style='width: 100%; height:4vh; text-align:center; border:0px; color:#420217; background:#420217;' />
 
         <div class="container">
-            <span>
-
-                <a href="./prato-pronto.html"><img class="foto-categorias"
-                        src="./Fotos categorias/Pratos prontos/foto comidas prontas.jpg" alt="pratos-prontos">
-                </a>
-                Pratos Prontos
-            </span>
 
             <span>
-                <a href="./padaria.html"><img class="foto-categorias" src="./Fotos categorias/Padaria/Foto padaria.jpg"
-                        alt="Padaria">
-                </a>
-                Padaria
-            </span>
-
-            <span>
-                <a href="./açougue.html"><img class="foto-categorias" src="./Fotos categorias/Açougue/foto açougue.jpg"
-                        alt="açougue">
-                </a>
-                Açougue
-            </span>
-
-            <span>
-                <a href="./Bebidas.html"><img class="foto-categorias" src="./Fotos categorias/Bebidas/foto bebidas.jpg"
-                        alt="Bebidas">
-                </a>
-                Bebida
-            </span>
-
-            <span>
-                <a href="./Hortifruti.html"><img class="foto-categorias"
-                        src="./Fotos categorias/Hortifruti/images hortaliças.jpg" alt="Hortifruti">
-
-                <a href="./prato-pronto.html"><img class="foto-main" src="./Fotos categorias/Pratos prontos/foto comidas prontas.jpg" alt="pratos-prontos">
+                <a href="./prato-pronto.html"><img class="foto-main"
+                src="./Fotos categorias/Pratos prontos/foto comidas prontas.jpg" alt="pratos-prontos">
                 </a>
                 <p>Pratos Prontos</p>
             </span>
 
             <span>
-                <a href="./padaria.html"><img class="foto-main" src="./Fotos categorias/Padaria/Foto padaria.jpg"
-                        alt="Padaria">
+                <a href="./padaria.html"><img class="foto-main" src="./Fotos categorias/Padaria/Foto padaria.jpg" alt="Padaria">
                 </a>
                 <p>Padaria</p>
             </span>
 
             <span>
-                <a href="./açougue.html"><img class="foto-main" src="./Fotos categorias/Açougue/foto açougue.jpg"
-                        alt="açougue">
+                <a href="./açougue.html"><img class="foto-main" src="./Fotos categorias/Açougue/foto açougue.jpg" alt="açougue">
                 </a>
                 <p>Açougue</p>
             </span>
 
             <span>
-                <a href="./Bebidas.html"><img class="foto-main" src="./Fotos categorias/Bebidas/foto bebidas.jpg"
-                        alt="Bebidas">
+                <a href="./Bebidas.html"><img class="foto-main" src="./Fotos categorias/Bebidas/foto bebidas.jpg" alt="Bebidas">
                 </a>
                 <p>Bebida</p>
             </span>
 
             <span>
                 <a href="./Hortifruti.html"><img class="foto-main" src="./Fotos categorias/Hortifruti/images hortaliças.jpg" alt="Hortifruti">
-
                 </a>
                 <p>Hortifruti</p>
             </span>
 
             <span>
-
-                <a href="./Hortifruti.html"><img class="foto-categorias"
-                        src="./Fotos categorias/Hortifruti/images hortaliças.jpg" alt="Hortifruti">
-                </a>
-                <p>Kits e Promoções</p>
-
-                <a href="./kits-promos.html"><img class="foto-main" src="./Fotos categorias/promocoes/kit 3.jpg" alt="Hortifruti">
+                <a href="./kits-promos.html"><img class="foto-main" src="./Fotos categorias/promocoes/kit 3.jpg" alt="kits">
                 </a>
                 <p>Kits Semanais</p>
-
             </span>
 
         </div>
 
     </main>
+    
     <hr style='width: 100%; height:4vh; text-align:center; border:0px; color:#420217; background:#420217;' />
     <hr style='width: 100%; height:1vh; text-align:center; border:0px; color:#f7a1a1; background:#f7a1a1;' />
 
     <footer>
         <div class="footer-left">
             <p class="text-left">Redes Sociais</p>
-            <a href="https://www.facebook.com" target="_blank"><img id="tamanho-logos-footer" src="./img/facebook logo.png"></a>
-            <a href="https://www.instagram.com" target="_blank"><img id="tamanho-logos-footer" src="./img/logo insta.png"></a>
-            <a href="https://www.twitter.com" target="_blank"><img id="tamanho-logos-footer" src="./img/logo twitter.png"></a>
-            <a href="https://web.whatsapp.com" target="_blank"><img id="tamanho-logos-footer" src="./img/whats logo.png"></a>
+            <a href="https://www.facebook.com" target="_blank"><img id="tamanho-logos-footer"
+                    src="./img/facebook logo.png"></a>
+            <a href="https://www.instagram.com" target="_blank"><img id="tamanho-logos-footer"
+                    src="./img/logo insta.png"></a>
+            <a href="https://www.twitter.com" target="_blank"><img id="tamanho-logos-footer"
+                    src="./img/logo twitter.png"></a>
+            <a href="https://web.whatsapp.com" target="_blank"><img id="tamanho-logos-footer"
+                    src="./img/whats logo.png"></a>
         </div>
         <div class="footer-right">
             <p class="text-right">Formas de Pagamento</p>
