--- a/kits-promos.html
+++ b/kits-promos.html
@@ -46,21 +46,21 @@
             </tr>
 
             <tr>
-                <td class="tamanho-td-tabela"><img class="foto-kit" src="./Fotos categorias/promocoes/kit 1.jpg" alt="kits"></td>
+                <td class="tamanho-td-tabela"><img  src="./Fotos categorias/promocoes/kit 1.jpg" alt="kits"></td>
                 <td>Kit 7 Marmitas</td>
                 <td>R$90,00 </td>
                 <td><button class="imagem-compra"><img class="imagem-compra" src="./img/compra.png"></button></td>
             </tr>
 
             <tr>
-                <td class="tamanho-td-tabela"><img class="foto-kit" src="./Fotos categorias/promocoes/kit 2.jpg" alt="kits"></td>
+                <td class="tamanho-td-tabela"><img  src="./Fotos categorias/promocoes/kit 2.jpg" alt="kits"></td>
                 <td>Kit 10 Marmitas</td>
                 <td>R$125,00</td>
                 <td><button class="imagem-compra"><img class="imagem-compra" src="./img/compra.png"></button></td>
             </tr>
 
             <tr>
-                <td class="tamanho-td-tabela"><img class="foto-kit" src="./Fotos categorias/promocoes/kit 4.jpg" alt="kits">
+                <td class="tamanho-td-tabela"><img  src="./Fotos categorias/promocoes/kit 4.jpg" alt="kits">
                 </td>
                 <td class="centraliza">Kit 14 Marmitas</td>
                 <td class="centraliza">R$185,00 </td>
@@ -68,7 +68,7 @@
             </tr>
 
             <tr>
-                <td class="tamanho-td-tabela"><img class="foto-kit" src="./Fotos categorias/promocoes/kits foto principal.jpg" alt="kits"></td>
+                <td class="tamanho-td-tabela"><img src="./Fotos categorias/promocoes/kits foto principal.jpg" alt="kits"></td>
                 <td class="centraliza">Kit 20 Marmitas</td>
                 <td class="centraliza">R$275,00 </td>
                 <td class="centraliza"><button class="imagem-compra"><img class="imagem-compra" src="./img/compra.png"></button></td>
